--- a/static/style.css
+++ b/static/style.css
@@ -10,6 +10,10 @@ body {
     color: #fff;
     overflow-x: hidden;
     position: relative;
+      /* fallback for Safari/iOS */
+    -webkit-background-size: cover;
+    -webkit-overflow-scrolling: touch;
+    position: relative;
 }
 
 body::before {
