--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
     <input type="text" id="searchBox" placeholder="Type movie name..." autocomplete="off">
 </div>
     <!-- Profile Button -->
-    <button onclick="toggleSidebar()" class="profile-btn">👤</button>
+    <button onclick="toggleSidebar()" class="profile-btn",id="pp">👤</button>
 
     <!-- Profile Side Panel -->
     <div id="profilePanel" class="profile-panel">
